--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -15,11 +16,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Bleeding Edge Web</h1>
-        <p>A meetup for the discerning web app developer</p>
+        <h1 class="header">Bleeding Edge Web</h1>
+        <p class="header">A meetup for the discerning web app developer</p>
 
 
-        <p class="view"><a href="https://github.com/edgeATX">View My GitHub Profile</a></p>
+
+        <ul>
+          <li><a class="buttons github" href="https://github.com/edgeATX">GitHub Profile</a></li>
+        </ul>
 
       </header>
       <section>
@@ -37,11 +41,11 @@
 <p>Follow us on <a href="https://twitter.com/edgeatx">Twitter</a>.</p>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		          <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
