Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -16,15 +17,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Bleeding Edge Web</h1>
-        <p class="header">A meetup for the discerning web app developer</p>
-
-
-
+        <h1>Bleeding Edge Web</h1>
+        <p>A meetup for the discerning web app developer</p>
+        <p class="view"><a href="https://github.com/edgeATX">View the Project on GitHub <small>edgeATX</small></a></p>
         <ul>
-          <li><a class="buttons github" href="https://github.com/edgeATX">GitHub Profile</a></li>
+          <li class="single"><a href="https://github.com/edgeATX/edgeATX.github.io">View On <strong>GitHub</strong></a></li>
         </ul>
-
       </header>
       <section>
         <h1>
@@ -40,12 +38,12 @@
 
 <p>Follow us on <a href="https://twitter.com/edgeatx">Twitter</a>.</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
     </div>
+    <footer>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		          <script type="text/javascript">
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
