--- a/index.html
+++ b/index.html
@@ -4,29 +4,41 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Bleeding Edge Web by edgeATX</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/edgeATX">View On GitHub</a></li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header>
-        <h1>Bleeding Edge Web</h1>
-        <p>A meetup for the discerning web app developer</p>
-        <p class="view"><a href="https://github.com/edgeATX">View the Project on GitHub <small>edgeATX</small></a></p>
-        <ul>
-          <li class="single"><a href="https://github.com/edgeATX/edgeATX.github.io">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
+
       <section>
+        <div id="title">
+          <h1>Bleeding Edge Web</h1>
+          <p>A meetup for the discerning web app developer</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/edgeATX">edgeATX</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
+
         <h1>
 <a name="bleeding-edge-web" class="anchor" href="#bleeding-edge-web"><span class="octicon octicon-link"></span></a>Bleeding Edge Web</h1>
+
+<p><em>A meetup for the discerning web app developer</em></p>
 
 <p><a href="http://www.meetup.com/bleeding-edge-web/">http://www.meetup.com/bleeding-edge-web/</a></p>
 
@@ -36,10 +48,8 @@
 
 <p>Follow us on <a href="https://twitter.com/edgeatx">Twitter</a>.</p>
       </section>
+
     </div>
-    <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
