--- a/index.html
+++ b/index.html
@@ -1,56 +1,45 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Bleeding Edge Web by edgeATX</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>Bleeding Edge Web Meetup - Austin, TX</title>
+  <link rel="stylesheet" href="stylesheets/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <!--[if lt IE 9]>
+  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+</head>
+<body>
+  <div class="wrapper">
+    <header>
+      <h1>Bleeding Edge Web</h1>
+      <img src="images/bleeding-edge.png" alt="Bleeding Edge Web">
+    </header>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Bleeding Edge Web</h1>
-        <p>A meetup for the discerning web app developer</p>
+    <section>
+      <p><em><strong>A meetup for the discerning web app developer</strong></em></p>
+      <p>&rArr; View our <a href="slides">presentations</a></p>
+      <p>Join: <a href="http://www.meetup.com/bleeding-edge-web/">http://www.meetup.com/bleeding-edge-web/</a></p>
+      <p>We meet at the awesome <a href="http://capitalfactory.com/">Capital Factory</a> at 7pm on the 4th Wednesday of each month</p>
+      <p>Events are <a href="http://capitalfactory.lifesize.com/videos/">livestreamed and recorded</a></p>
+      <p>Follow us on <a href="https://twitter.com/edgeatx">Twitter</a></p>
+      <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
+    </section>
 
+    <footer></footer>
+  </div>
 
-        <p class="view"><a href="https://github.com/edgeATX">View My GitHub Profile</a></p>
-
-      </header>
-      <section>
-        <h1>
-<a name="bleeding-edge-web" class="anchor" href="#bleeding-edge-web"><span class="octicon octicon-link"></span></a>Bleeding Edge Web</h1>
-
-<p><em>A meetup for the discerning web app developer</em></p>
-
-<p><a href="http://www.meetup.com/bleeding-edge-web/">http://www.meetup.com/bleeding-edge-web/</a></p>
-
-<p>We meet at the awesome <a href="http://capitalfactory.com/">Capital Factory</a> at 7pm on the 4th Wednesday of each month.</p>
-
-<p>Events are <a href="http://capitalfactory.lifesize.com/videos/">livestreamed and recorded</a>.</p>
-
-<p>Follow us on <a href="https://twitter.com/edgeatx">Twitter</a>.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-18103207-9");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
-
-  </body>
+  <script src="javascripts/scale.fix.js"></script>
+  <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+    try {
+      var pageTracker = _gat._getTracker("UA-18103207-9");
+      pageTracker._trackPageview();
+    } catch(err) {}
+  </script>
+</body>
 </html>
