Finish Aug slides, publish

--- a/slides/index.html
+++ b/slides/index.html
@@ -26,6 +26,7 @@
 
       <h3>2014</h3>
       <ul>
+        <li>August &mdash; <a href="2014/08-aug">Web App by Example: Python</a></li>
         <li>July &mdash; <a href="2014/07-july">Web App by Example: Node.js</a></li>
         <li>June &mdash; <a href="2014/06-june">Customize Your Workflow.js</a></li>
         <li>January &mdash; <a href="2014/01-jan">Geek Fitness / FitChimp Tech Talk</a></li>
