Added Jan BEW slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -24,6 +24,11 @@
         that highlights a few current themes in web app development, in addition to the primary topics
         listed below.</em></p>
 
+      <h3>2015</h3>
+      <ul>
+        <li>January &mdash; <a href="2015/01-jan">Accelerating Your Development, Deployment and Learning with Yeoman</a></li>
+      </ul>
+
       <h3>2014</h3>
       <ul>
         <li>October &mdash; <a href="2014/10-oct">D3.js: Data Visualization for the Modern Web</a></li>
@@ -33,7 +38,25 @@
         <li>January &mdash; <a href="2014/01-jan">Geek Fitness / FitChimp Tech Talk</a></li>
       </ul>
 
-      <h3>2013</h3>
+      <<h3>2014</h3>
+      <ul>
+        <li>October &mdash; <a href="2014/10-oct">D3.js: Data Visualization for the Modern Web</a></li>
+        <li>August &mdash; <a href="2014/08-aug">Web App by Example: Python</a></li>
+        <li>July &mdash; <a href="2014/07-july">Web App by Example: Node.js</a></li>
+        <li>June &mdash; <a href="2014/06-june">Customize Your Workflow.js</a></li>
+        <li>January &mdash; <a href="2014/01-jan">Geek Fitness / FitChimp Tech Talk</a></li>
+      </ul>
+
+      <h3>2014</h3>
+      <ul>
+        <li>October &mdash; <a href="2014/10-oct">D3.js: Data Visualization for the Modern Web</a></li>
+        <li>August &mdash; <a href="2014/08-aug">Web App by Example: Python</a></li>
+        <li>July &mdash; <a href="2014/07-july">Web App by Example: Node.js</a></li>
+        <li>June &mdash; <a href="2014/06-june">Customize Your Workflow.js</a></li>
+        <li>January &mdash; <a href="2014/01-jan">Geek Fitness / FitChimp Tech Talk</a></li>
+      </ul>
+
+      h3>2013</h3>
       <ul>
         <li>December &mdash; <a href="2013/12-dec">Debugging Tools (Chrome DevTools / Firefox Developer Tools)</a></li>
         <li>September &mdash; <a href="2013/09-sep">10 Months with Meteor.js</a></li>
