--- a/slides/index.html
+++ b/slides/index.html
@@ -26,6 +26,7 @@
 
       <h3>2015</h3>
       <ul>
+        <li>February &mdash; <a href="2015/02-feb">Typescript Deep Dive</a></li>
         <li>January &mdash; <a href="2015/01-jan">Accelerating Your Development, Deployment and Learning with Yeoman</a></li>
       </ul>
 
