--- a/slides/index.html
+++ b/slides/index.html
@@ -27,6 +27,7 @@
 
       <h3>2015</h3>
       <ul>
+        <li>June &mdash; <a href="2015/06-jun">ES6 &amp; WebAssembly + Lightning Talks</a></li>
         <li>Special Event &mdash; <a href="2015/faceoff-06">Faceoff on the Lake</a></li>
         <li>May &mdash; <a href="2015/05-may">An Evening With Jeff Lindsay</a></li>
         <li>March &mdash; <a href="2015/03-mar">Real-world npm</a></li>
