--- a/slides/index.html
+++ b/slides/index.html
@@ -27,6 +27,7 @@
 
       <h3>2015</h3>
       <ul>
+        <li>August &mdash; <a href="2015/08-aug">Intro to React and Redux</a></li>
         <li>July &mdash; <a href="2015/07-jul">On the Edge: Intro to the new MS Browser</a></li>
         <li>June &mdash; <a href="2015/06-jun">ES6 &amp; WebAssembly + Lightning Talks</a></li>
         <li>Special Event &mdash; <a href="2015/faceoff-06">Faceoff on the Lake</a></li>
