--- a/slides/index.html
+++ b/slides/index.html
@@ -27,6 +27,7 @@
 
       <h3>2015</h3>
       <ul>
+        <li>October &mdash; <a href="2015/10-oct">The Road Four Node</a></li>
         <li>September &mdash; <a href="2015/09-sep">Overview of Ember</a></li>
         <li>August &mdash; <a href="2015/08-aug">Intro to React and Redux</a></li>
         <li>July &mdash; <a href="2015/07-jul">On the Edge: Intro to the new MS Browser</a></li>
