--- a/speak.html
+++ b/speak.html
@@ -36,6 +36,7 @@
       <p><em>Many members head to a local bar for networking/socializing after the event.</em></p>
 
       <p><em><strong>What to Talk About</strong></em></p>
+      <p style="font-size: 60%;">If you'd like to talk but don't think you can fill up an hour, try a lightning talk (see below)</p>
       <p>We like to discuss all things web and mobile. We've had a number of talks about Node.js,
         HTML/JavaScript/CSS, web servers, libraries & frameworks, etc. We've also had talks about
         Google Glass, Automating your home, internet of things, and others. The bottom line: if
@@ -49,10 +50,9 @@
 
       <p><em><strong>Lightning Talks</strong></em></p>
       <p>There aren't any formal guidelines for these, other than trying to keep it to ~5mins.
-        If you'd like to talk but don't think you can fill up an hour, try
-      Some people use 3-5 slides, some just talk. Topics can be anything of interest
-      to the group. You know what the group is interested in because you're a part of
-      it (what interests you?).</p>
+        Some people use 3-5 slides, some just talk. Topics can be anything of interest
+        to the group. You know what the group is interested in because you're a part of
+        it (what interests you?).</p>
       <ul>
         <li>A project you're working on at work or for fun. (show & tell)</li>
         <li>A new (or new-to-you) code library/framework that excites you. (mini-lesson)</li>
@@ -62,24 +62,6 @@
       mobile apps, CSS Pointer Events, Node.js utilities, developer services, personal project,
       hackathons, etc.</p>
 
-      <p><em><strong>Sponsorship Opportunities</strong></em></p>
-      <p>We typically ask for $150 to cover the cost of pizza. Any remainder is used to offset some
-        of the costs of running the meetup. You're welcome to provide more or supply different food/drinks
-        so long as it complies with Capital Factory's rules. This means liquor is OK as long as it is prepackaged
-        in cans or bottles. Open liquor is also possible, but you must provide a licensed bartender.</p>
-      <p>In return, you get:</p>
-      <ul>
-        <li>A thank you credit in the Bleeding Edge Web segment.</li>
-        <li>A few minutes to introduce your company.</li>
-        <li>A listing on our meetup page as a sponsor.</li>
-        <li>A place to hand out swag.</li>
-        <li>A tax write off?</li>
-      </ul>
-      <p>This is a great opportunity to create some local awareness, find potential employees,
-        give back to the community, and meet new people.</p>
-      <p><em><strong>Alternative Sponsorship Opportunities</strong></em></p>
-      <p>We've had other sponsors provide give-away items from books to gadgets. If you are interested
-      in sponsoring a give-away, let us know!</p>
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
     <footer></footer>
