--- a/slides/index.html
+++ b/slides/index.html
@@ -25,6 +25,11 @@
         that highlights a few current themes in web app development, in addition to the primary topics
         listed below.</em></p>
 
+      <h3>2016</h3>
+      <ul>
+        <li>January &mdash; <a href="2016/01-jan">Intro to Web Components</a></li>
+      </ul>
+
       <h3>2015</h3>
       <ul>
         <li>October &mdash; <a href="2015/10-oct">The Road Four Node</a></li>
