--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p><span class="star">&#x272A;</span> <a href="http://www.meetup.com/bleeding-edge-web/">Join the meetup</a> to be notified about new events</p>
       <p><span class="star">&#x272A;</span> <a target="_blank" href="mailto:bleedingedgeatx@gmail.com?subject=Slack Invite">Join</a> our <a href="https://edgeatx.slack.com">Slack group</a> to engage with the community, or to participate in our live events remotely</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./speak.html">speaking</a> opportunities.</p>
-      <p><span class="star">&#x272A;</span> Learn about <a href="./speak.html">sponsorship</a> opportunities.</p>
+      <p><span class="star">&#x272A;</span> Learn about <a href="./sponsorship.html">sponsorship</a> opportunities.</p>
 
       <p><em><strong>About Us</strong></em></p>
       <p>We are an Austin meetup about all things web+mobile. We are language/framework agnostic, and we cover different topics each month, with a focus on front end technology.</p>
