--- a/speak.html
+++ b/speak.html
@@ -36,7 +36,7 @@
       <p><em>Many members head to a local bar for networking/socializing after the event.</em></p>
 
       <p><em><strong>What to Talk About</strong></em></p>
-      <p style="font-size: 60%;">If you'd like to talk but don't think you can fill up an hour, try a lightning talk (see below)</p>
+      <p style="font-size: 65%;">If you'd like to talk but don't think you can fill up an hour, try a lightning talk (see below)!</p>
       <p>We like to discuss all things web and mobile. We've had a number of talks about Node.js,
         HTML/JavaScript/CSS, web servers, libraries & frameworks, etc. We've also had talks about
         Google Glass, Automating your home, internet of things, and others. The bottom line: if
