Updated livestream link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p><em><strong>About Us</strong></em></p>
       <p>We are an Austin meetup about all things web+mobile. We are language/framework agnostic, and we cover different topics each month, with a focus on front end technology.</p>
       <p>We meet at the awesome <a href="http://capitalfactory.com/">Capital Factory</a> at 7pm on the 4th Wednesday of each month.</p>
-      <p>Events are <a href="http://capitalfactory.lifesize.com/videos/">livestreamed and recorded</a>, and you can follow <a href="https://twitter.com/edgeatx">@EdgeATX</a> for news and updates.</p>
+      <p>Events are <a href="http://youtube.com/austintechlive">livestreamed on YouTube</a>, and you can follow <a href="https://twitter.com/edgeatx">@EdgeATX</a> for news and updates.</p>
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
 
