Added slide tips section

--- a/speak.html
+++ b/speak.html
@@ -21,6 +21,7 @@
     <header>
       <h1>Bleeding Edge Web</h1>
       <img src="images/bleeding-edge.png" alt="Bleeding Edge Web">
+      <p><a href="./">&larr; Home</a></p>
     </header>
 
     <section>
@@ -35,7 +36,7 @@
       </ol>
       <p><em>Many members head to a local bar for networking/socializing after the event.</em></p>
 
-      <p><em><strong>What to Talk About</strong></em></p>
+      <p id="what"><em><strong>What to Talk About</strong></em></p>
       <p style="font-size: 65%;">If you'd like to talk but don't think you can fill up an hour, try a lightning talk (see below)!</p>
       <p>We like to discuss all things web and mobile. We've had a number of talks about Node.js,
         HTML/JavaScript/CSS, web servers, libraries & frameworks, etc. We've also had talks about
@@ -48,19 +49,34 @@
         in town, you're probably a good candidate for speaking to our group. Jumpstart your meetup
         with us, or guage interest in a subject.</p>
 
-      <p><em><strong>Lightning Talks</strong></em></p>
+      <p id="lightning-talks"><em><strong>Lightning Talks</strong></em></p>
       <p>There aren't any formal guidelines for these, other than trying to keep it to ~5mins.
         Some people use 3-5 slides, some just talk. Topics can be anything of interest
         to the group. You know what the group is interested in because you're a part of
         it (what interests you?).</p>
       <ul>
-        <li>A project you're working on at work or for fun. (show & tell)</li>
+        <li>A project you're working on at work or for fun. (show &amp; tell)</li>
         <li>A new (or new-to-you) code library/framework that excites you. (mini-lesson)</li>
       </ul>
 
       <p>Lightning talks in the past have covered things like Vue.js, RiotJS, functional programming,
       mobile apps, CSS Pointer Events, Node.js utilities, developer services, personal project,
       hackathons, etc.</p>
+
+      <p id="slide-tips"><em><strong>Slide Tips</strong></em></p>
+      <p>If your talk includes slides, remember that you'll be presenting in a large room on screens
+        that may be hard to see for people sitting in the back. Also while we record the slides on
+        video, the camera is not close to the screen, and the resolution is relatively low. Ideally
+        slides should be optimized with these limitations in mind:
+      <ul>
+        <li>Slides should be <strong>light text on dark background</strong>. Very light backgrounds
+          wash out completely on video and negatively affect the overall video quality.</li>
+        <li><strong>Font size should be large</strong>. Favor more slides with less text per slide
+          over fewer densely-populated slides when possible. 24px would be a good minimum size.</li>
+        <li>Favor <strong>high contrast</strong> between text and background colors.</li>
+        <li>As a general presentation tip, favor <strong>strong visuals over text</strong> as much
+          as possible. People won't remember all the details, and can look them up later if needed.</li>
+      </ul>
 
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
