--- a/sponsorship.html
+++ b/sponsorship.html
@@ -21,6 +21,7 @@
     <header>
       <h1>Bleeding Edge Web</h1>
       <img src="images/bleeding-edge.png" alt="Bleeding Edge Web">
+      <p><a href="./">&larr; Home</a></p>
     </header>
 
     <section>
@@ -39,6 +40,7 @@
       </ul>
       <p>This is a great opportunity to create some local awareness, find potential employees,
         give back to the community, and meet new people.</p>
+
       <p><em><strong>Alternative Sponsorship Opportunities</strong></em></p>
       <p>We've had other sponsors provide give-away items from books to gadgets. If you are interested
       in sponsoring a give-away, let us know!</p>
