--- a/slides/index.html
+++ b/slides/index.html
@@ -27,6 +27,7 @@
 
       <h3>2016</h3>
       <ul>
+      <li>February &mdash; <a href="2016/02-feb">React 2016 Conference Recap</a></li>
         <li>January &mdash; <a href="2016/01-jan">Intro to Web Components</a></li>
       </ul>
 
