--- a/slides/index.html
+++ b/slides/index.html
@@ -27,8 +27,7 @@
 
       <h3>2016</h3>
       <ul>
-        <li>February &mdash; <a href="2016/02-feb">Bleeding Edge</a> | <a
-          href="2016/02-feb-react">React.js Conf 2016 Recap</a></li>
+        <li>February &mdash; <a href="2016/02-feb">React 2016 Conference Recap</a></li>
         <li>January &mdash; <a href="2016/01-jan">Intro to Web Components</a></li>
       </ul>
 
