--- a/slides/index.html
+++ b/slides/index.html
@@ -27,7 +27,7 @@
 
       <h3>2016</h3>
       <ul>
-        <li>February &mdash; <a href="2016/02-feb">Bleeding Edge</a> / <a href="2016/02-feb-react">React 2016 Conference Recap</a> / <a href="http://slides.com/niftymonkey/hipchat-react-one-year-later-short/live">HipChat on React</a></li>
+        <li>February &mdash; <a href="2016/02-feb">Bleeding Edge</a> / <a href="2016/02-feb-react">React 2016 Conference Recap</a> / <a href="http://slides.com/niftymonkey/hipchat-react-one-year-later-short#/">HipChat on React</a></li>
         <li>January &mdash; <a href="2016/01-jan">Intro to Web Components</a></li>
       </ul>
 
