--- a/slides/index.html
+++ b/slides/index.html
@@ -27,6 +27,7 @@
 
       <h3>2016</h3>
       <ul>
+        <li>March &mdash; <a href="2016/03-mar">Go: A Practical Start Guide</a></li>
         <li>February &mdash; <a href="2016/02-feb">Bleeding Edge</a> / <a href="2016/02-feb-react">React 2016 Conference Recap</a> / <a href="http://slides.com/niftymonkey/hipchat-react-one-year-later-short#/">HipChat on React</a></li>
         <li>January &mdash; <a href="2016/01-jan">Intro to Web Components</a></li>
       </ul>
