--- a/slides/index.html
+++ b/slides/index.html
@@ -20,17 +20,25 @@
     </header>
 
     <section>
-      <h2>Presentations</h2>
-      <p style="font-size:16px;"><em>Most presentations include a "News from the Bleeding Edge" section
-        that highlights a few current themes in web app development, in addition to the primary topics
-        listed below.</em></p>
+      <h2>Videos</h2>
+      <p style="font-size:16px;">Since early 2015 our meetups have been livestreamed and recorded.
+        All of our past videos are available on the <a
+        href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">Austin Tech
+        Live YouTube channel</a>.</p>
+
+      <h2>Slides</h2>
+
+      <p style="font-size:16px;">Most presentations include a "News from the Bleeding Edge" section
+        that highlights a few current themes in web app development, in addition to a primary
+        presentation (linked when available).</p>
 
       <h3>2016</h3>
       <ul>
-        <li>March &mdash; <a href="2016/03-mar">Bleeding Edge</a> / <a
+        <li>March &mdash; <a href="2016/03-mar">Bleeding Edge Web</a> / <a
           href="http://go-talks.appspot.com/github.com/judwhite/talks-edgeatx/talk.slide">Go:
           A Practical Start Guide</a> (<a href="https://github.com/judwhite/talks-edgeatx">code</a>)</li>
-        <li>February &mdash; <a href="2016/02-feb">Bleeding Edge</a> / <a href="2016/02-feb-react">React 2016 Conference Recap</a> / <a href="http://slides.com/niftymonkey/hipchat-react-one-year-later-short#/">HipChat on React</a></li>
+        <li>February &mdash; <a href="2016/02-feb">Bleeding Edge Web</a> / <a href="2016/02-feb-react">React
+          2016 Conference Recap</a> / <a href="http://slides.com/niftymonkey/hipchat-react-one-year-later-short#/">HipChat on React</a></li>
         <li>January &mdash; <a href="2016/01-jan">Intro to Web Components</a></li>
       </ul>
 
