Updated sponsor info

--- a/sponsorship.html
+++ b/sponsorship.html
@@ -26,24 +26,28 @@
 
     <section>
       <p><em><strong>Sponsorship Opportunities</strong></em></p>
-      <p>We typically ask for $150 to cover the cost of pizza. Any remainder is used to offset some
-        of the costs of running the meetup. You're welcome to provide more or supply different food/drinks
-        so long as it complies with Capital Factory's rules. This means liquor is OK as long as it is prepackaged
-        in cans or bottles. Open liquor is also possible, but you must provide a licensed bartender.</p>
+      <p>We typically ask for $200 to cover the cost of food and drink (we typically feed 60-80
+        attendees). We handle all of the ordering and delivery logistics. Remaining money, if any,
+        is used to offset the recurring costs of running the meetup (e.g. meetup.com fees).</p>
+      <p>Alternately, you are welcome to supply your own food/drinks instead, so long as it complies
+        with Capital Factory's rules. This means alcohol is OK as long as it is pre-packaged in
+        cans or bottles. Open liquor is also possible, but you must provide a licensed bartender.</p>
       <p>In return, you get:</p>
       <ul>
-        <li>A thank you credit in the Bleeding Edge Web segment.</li>
-        <li>A few minutes to introduce your company.</li>
-        <li>A listing on our meetup page as a sponsor.</li>
-        <li>A place to hand out swag.</li>
+        <li>Your name in front of every person who receives our invitation emails (~1,800 as of
+          March 2016, mostly developers in Austin)</li>
+        <li>A thank you slide and mention during the Bleeding Edge Web presentation</li>
+        <li>A chance to address the group in person, if desired</li>
+        <li>A listing on our meetup page as a sponsor</li>
+        <li>An opportunity to hand out swag, sign people up, etc.</li>
         <li>A tax write off?</li>
       </ul>
       <p>This is a great opportunity to create some local awareness, find potential employees,
         give back to the community, and meet new people.</p>
 
-      <p><em><strong>Alternative Sponsorship Opportunities</strong></em></p>
-      <p>We've had other sponsors provide give-away items from books to gadgets. If you are interested
-      in sponsoring a give-away, let us know!</p>
+      <p><em><strong>Alternate Sponsorship Opportunities</strong></em></p>
+      <p>We've had sponsors provide giveaway items from books to stickers to physical gadgets.
+        If you are interested in providing swag or giveaway items, let us know!</p>
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
     <footer></footer>
