--- a/speak.html
+++ b/speak.html
@@ -41,7 +41,7 @@
       <p id="what"><em><strong>What to Talk About</strong></em></p>
       <p style="font-size: 65%;">If you'd like to talk but don't think you can fill up an hour, try a lightning talk (see below)!</p>
       <p>We like to discuss all things web and mobile. We've had a number of talks about Node.js,
-        HTML/JavaScript/CSS, web servers, libraries & frameworks, etc. We've also had talks about
+        HTML/JavaScript/CSS, web servers, libraries &amp; frameworks, etc. We've also had talks about
         Google Glass, Automating your home, internet of things, and others. The bottom line: if
         you think it would interest the group, it's likely a good fit.
       <p>Bleeding Edge Web is a semi-general group. Our members are interested in web technology.
