--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <h3>2016</h3>
       <ul>
         <li>April &mdash; <a href="2016/04-apr">Bleeding Edge Web</a> / <a
-          href="">Microservices Panel</a></li>
+          href="http://www.slideshare.net/asiemer/microservices-prosandconsdark">Microservices Panel</a></li>
         <li>March &mdash; <a href="2016/03-mar">Bleeding Edge Web</a> / <a
           href="http://go-talks.appspot.com/github.com/judwhite/talks-edgeatx/talk.slide">Go:
           A Practical Start Guide</a> (<a href="https://github.com/judwhite/talks-edgeatx">code</a>)</li>
