Initial placeholder stuff

--- a/slides/index.html
+++ b/slides/index.html
@@ -34,6 +34,8 @@
 
       <h3>2016</h3>
       <ul>
+        <li>May &mdash; <a href="2016/05-may">Bleeding Edge Web</a> / <a
+          href="">All About Node 6</a></li>
         <li>April &mdash; <a href="2016/04-apr">Bleeding Edge Web</a> / <a
           href="http://www.slideshare.net/asiemer/microservices-prosandconsdark">Microservices Panel</a></li>
         <li>March &mdash; <a href="2016/03-mar">Bleeding Edge Web</a> / <a
