--- a/slides/index.html
+++ b/slides/index.html
@@ -34,6 +34,8 @@
 
       <h3>2016</h3>
       <ul>
+        <li>June &mdash; <a href="2016/06-jun">Bleeding Edge Web</a> / <a
+          href="">Vue.js: The best view library you've never heard of</a></li>
         <li>May &mdash; <a href="2016/05-may">Bleeding Edge Web</a> / <a
           href="http://evanlucas.com/slides/all_about_node_6.html">All About Node 6</a></li>
         <li>April &mdash; <a href="2016/04-apr">Bleeding Edge Web</a> / <a
