Added July presentation.

--- a/slides/index.html
+++ b/slides/index.html
@@ -34,9 +34,10 @@
 
       <h3>2016</h3>
       <ul>
-        <li>June &mdash; <a href="2016/06-jun">Bleeding Edge Web</a> / <a
-          href="https://docs.google.com/presentation/d/1Rg3iuh-p3O0TejefRs02k7uyw7qHt9h_v2zHExULE9o/edit?usp=sharing">Vue.js: The best view library you've never heard of</a></li>
-        <li>May &mdash; <a href="2016/05-may">Bleeding Edge Web</a> / <a
+        <li>July &mdash; <a href="2016/07-jul">Bleeding Edge Web</a></li>
+          <li>June &mdash; <a href="2016/06-jun">Bleeding Edge Web</a> / <a
+            href="https://docs.google.com/presentation/d/1Rg3iuh-p3O0TejefRs02k7uyw7qHt9h_v2zHExULE9o/edit?usp=sharing">Vue.js: The best view library you've never heard of</a></li>
+          <li>May &mdash; <a href="2016/05-may">Bleeding Edge Web</a> / <a
           href="http://evanlucas.com/slides/all_about_node_6.html">All About Node 6</a></li>
         <li>April &mdash; <a href="2016/04-apr">Bleeding Edge Web</a> / <a
           href="http://www.slideshare.net/asiemer/microservices-prosandconsdark">Microservices Panel</a></li>
