Add speaker guide, other cosmetic updates

--- a/speak.html
+++ b/speak.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>Bleeding Edge Web Meetup Speakers - Austin, TX</title>
+  <title>Bleeding Edge Web Meetup - Speaking Overview</title>
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="icon" type="image/x-icon" href="http://edgeatx.github.io/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -25,7 +25,8 @@
     </header>
 
     <section>
-      <p><em><strong>Speaking Opportunities</strong></em></p>
+      <h2>Speaking Opportunities</h2>
+
       <p>To volunteer to speak, or if you have any questions about speaking, please <a
         href="mailto:bleedingedgeatx@gmail.com?subject=Speaking%20Inquiry">email us</a>.
       <p>Bleeding Edge Web events follow a consistent format:</p>
@@ -36,20 +37,20 @@
         <li><b>Lightning Talks</b> (~3 talks @5mins/ea)</li>
         <li>Meetup formally ends by 9pm.</li>
       </ol>
-      <p><em>Many members head to a local bar for networking/socializing after the event.</em></p>
 
       <p id="what"><em><strong>What to Talk About</strong></em></p>
-      <p style="font-size: 65%;">If you'd like to talk but don't think you can fill up an hour, try a lightning talk (see below)!</p>
-      <p>We like to discuss all things web and mobile. We've had a number of talks about Node.js,
-        HTML/JavaScript/CSS, web servers, libraries &amp; frameworks, etc. We've also had talks about
-        Google Glass, Automating your home, internet of things, and others. The bottom line: if
-        you think it would interest the group, it's likely a good fit.
-      <p>Bleeding Edge Web is a semi-general group. Our members are interested in web technology.
-        Many of our members are also entrepreneurs, job seekers, employers, developers, CTO's, students,
-        and tinkerers. Lots of people means lots of interesting subjects.</p>
-      <p>If you run a more focused tech meetup group
-        in town, you're probably a good candidate for speaking to our group. Jumpstart your meetup
-        with us, or guage interest in a subject.</p>
+      <p style="font-size: 65%;">If you'd like to talk but don't think you can fill up an hour, try
+        a lightning talk (see below)!</p>
+      <p>We like to discuss all things web + mobile. We've had a number of talks about Node.js,
+        HTML/JS/CSS, web servers, libraries &amp; frameworks, etc. We've also had talks about
+        Google Glass, "Internet of things", etc. Bottom line: if you think it would interest
+        other web app developer types, it's likely a good fit.
+      <p>Our members are generally interested in web technology, but fall into a wide spectrum.
+        Many are entrepreneurs, job seekers, employers, developers, students, and tinkerers. Lots of
+        people means lots of interesting subjects.</p>
+      <p>If you run a tech meetup organized around a specific technology you might be a good candidate
+        for speaking to our group. Overview talks about languages and franeworks generally make for
+        perfect topics for our members who might not otherwise attend a meetup specific to them.</p>
 
       <p id="lightning-talks"><em><strong>Lightning Talks</strong></em></p>
       <p>There aren't any formal guidelines for these, other than trying to keep it to ~5mins.
@@ -65,20 +66,9 @@
       mobile apps, CSS Pointer Events, Node.js utilities, developer services, personal project,
       hackathons, etc.</p>
 
-      <p id="slide-tips"><em><strong>Slide Tips</strong></em></p>
-      <p>If your talk includes slides, remember that you'll be presenting in a large room on screens
-        that may be hard to see for people sitting in the back. Also while we record the slides on
-        video, the camera is not close to the screen, and the resolution is relatively low. Ideally
-        slides should be optimized with these limitations in mind:
-      <ul>
-        <li>Slides should be <strong>light text on dark background</strong>. Very light backgrounds
-          wash out completely on video and negatively affect the overall video quality.</li>
-        <li><strong>Font size should be large</strong>. Favor more slides with less text per slide
-          over fewer densely-populated slides when possible. 24px would be a good minimum size.</li>
-        <li>Favor <strong>high contrast</strong> between text and background colors.</li>
-        <li>As a general presentation tip, favor <strong>strong visuals over text</strong> as much
-          as possible. People won't remember all the details, and can look them up later if needed.</li>
-      </ul>
+      <p id="slide-tips"><em><strong>Speaker Guide</strong></em></p>
+      <p>If you are ready to present at the meetup we have a <a href="./speaker-guide.html">handy speaker
+        guide</a> that includes what we'll need from you and some tips that might help with your talk.</p>
 
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
