--- a/index.html
+++ b/index.html
@@ -26,15 +26,23 @@
     <section>
       <p><em><strong>A meetup for the discerning web app developer</strong></em></p>
       <p><span class="star">&#x272A;</span> <a href="slides">View our presentations</a></p>
-      <p><span class="star">&#x272A;</span> <a href="http://www.meetup.com/bleeding-edge-web/">Join the meetup</a> to be notified about new events</p>
-      <p><span class="star">&#x272A;</span> <a target="_blank" href="mailto:bleedingedgeatx@gmail.com?subject=Slack Invite">Join</a> our <a href="https://edgeatx.slack.com">Slack group</a> to engage with the community, or to participate in our live events remotely</p>
+      <p><span class="star">&#x272A;</span> <a href="http://www.meetup.com/bleeding-edge-web/">Join
+        the meetup</a> to be notified about new events</p>
+      <p><span class="star">&#x272A;</span> <a target="_blank"
+        href="mailto:bleedingedgeatx@gmail.com?subject=Slack Invite">Join</a> our <a
+        href="https://edgeatx.slack.com">Slack group</a> to engage with the community, or to
+        participate in our live events remotely</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./speak.html">speaking</a> opportunities.</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./sponsorship.html">sponsorship</a> opportunities.</p>
 
       <p><em><strong>About Us</strong></em></p>
-      <p>We are an Austin meetup about all things web+mobile. We are language/framework agnostic, and we cover different topics each month, with a focus on front end technology.</p>
-      <p>We meet at the awesome <a href="http://capitalfactory.com/">Capital Factory</a> at 7pm on the 4th Wednesday of each month.</p>
-      <p>Events are <a href="http://youtube.com/austintechlive">livestreamed on YouTube</a>, and you can follow <a href="https://twitter.com/edgeatx">@EdgeATX</a> for news and updates.</p>
+      <p>We are an Austin meetup about all things web+mobile. We are language/framework agnostic, and we
+        cover different topics each month, with a focus on front end technology.</p>
+      <p>We meet at <a href="http://capitalfactory.com/">Capital Factory</a> at 7pm on the 4th Wednesday
+        of each month, and we normally head a block over to <a href="http://buffalobilliardsaustin.com/">Buffalo
+        Billiards</a> for socializing after each meetup.</em></p></p>
+      <p>Events are <a href="http://youtube.com/austintechlive">livestreamed on YouTube</a>, and you
+        can follow <a href="https://twitter.com/edgeatx">@EdgeATX</a> for news and updates.</p>
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
 
