--- a/sponsorship.html
+++ b/sponsorship.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>Bleeding Edge Web Meetup Speakers - Austin, TX</title>
+  <title>Bleeding Edge Web Meetup  - Sponsorship</title>
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="icon" type="image/x-icon" href="http://edgeatx.github.io/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -25,10 +25,11 @@
     </header>
 
     <section>
-      <p><em><strong>Sponsorship Opportunities</strong></em></p>
+      <h2>Sponsorship Opportunities</h2>
+
       <p>To sponsor a meetup, or if you have any questions about sponsoring, please <a
         href="mailto:bleedingedgeatx@gmail.com?subject=Sponsorship%20Inquiry">email us</a>.
-      <p>We typically ask for $250 to cover the cost of food and drink (we typically feed 60-80
+      <p>We ask for $250 to cover the cost of food and drink (we typically feed 80+
         attendees). We handle all of the ordering and delivery logistics. Remaining money, if any,
         is used to offset the recurring costs of running the meetup (e.g. meetup.com fees).</p>
       <p>Alternately, you are welcome to supply your own food/drinks instead, so long as it complies
