Add slides link

--- a/slides/index.html
+++ b/slides/index.html
@@ -34,6 +34,7 @@
 
       <h3>2016</h3>
       <ul>
+        <li>August &mdash; <a href="2016/08-aug">Bleeding Edge Web</a></li>
         <li>July &mdash; <a href="2016/07-jul">Bleeding Edge Web</a> / <a href="https://files.slack.com/files-pri/T0B8SJNLQ-F1TSPBSRW/download/20160720-bleeding-edge-web.key">Painless Server-Side Rendering with React and ClojureScript (Keynote file)</a></li>
           <li>June &mdash; <a href="2016/06-jun">Bleeding Edge Web</a> / <a
             href="https://docs.google.com/presentation/d/1Rg3iuh-p3O0TejefRs02k7uyw7qHt9h_v2zHExULE9o/edit?usp=sharing">Vue.js: The best view library you've never heard of</a></li>
