September WIP slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -34,11 +34,17 @@
 
       <h3>2016</h3>
       <ul>
-        <li>August &mdash; <a href="2016/08-aug">Bleeding Edge Web</a></li>
-        <li>July &mdash; <a href="2016/07-jul">Bleeding Edge Web</a> / <a href="https://files.slack.com/files-pri/T0B8SJNLQ-F1TSPBSRW/download/20160720-bleeding-edge-web.key">Painless Server-Side Rendering with React and ClojureScript (Keynote file)</a></li>
-          <li>June &mdash; <a href="2016/06-jun">Bleeding Edge Web</a> / <a
-            href="https://docs.google.com/presentation/d/1Rg3iuh-p3O0TejefRs02k7uyw7qHt9h_v2zHExULE9o/edit?usp=sharing">Vue.js: The best view library you've never heard of</a></li>
-          <li>May &mdash; <a href="2016/05-may">Bleeding Edge Web</a> / <a
+        <li>September &mdash; <a href="2016/09-sep">Bleeding Edge Web</a> / <a
+          href="">Docker as a Strategic Enabler for Dev Teams</a></li>
+        <li>August &mdash; <a href="2016/08-aug">Bleeding Edge Web</a> / <a
+          href="https://saucelabs.com/resources/webinars/automation-best-practices">Test Automation Best Practices</a></li>
+        <li>July &mdash; <a href="2016/07-jul">Bleeding Edge Web</a> / <a
+          href="https://files.slack.com/files-pri/T0B8SJNLQ-F1TSPBSRW/download/20160720-bleeding-edge-web.key">Painless
+          Server-Side Rendering with React and ClojureScript (Keynote file)</a></li>
+        <li>June &mdash; <a href="2016/06-jun">Bleeding Edge Web</a> / <a
+          href="https://docs.google.com/presentation/d/1Rg3iuh-p3O0TejefRs02k7uyw7qHt9h_v2zHExULE9o/edit?usp=sharing">Vue.js:
+          The best view library you've never heard of</a></li>
+        <li>May &mdash; <a href="2016/05-may">Bleeding Edge Web</a> / <a
           href="http://evanlucas.com/slides/all_about_node_6.html">All About Node 6</a></li>
         <li>April &mdash; <a href="2016/04-apr">Bleeding Edge Web</a> / <a
           href="http://www.slideshare.net/asiemer/microservices-prosandconsdark">Microservices Panel</a></li>
