--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <h3>2016</h3>
       <ul>
         <li>September &mdash; <a href="2016/09-sep">Bleeding Edge Web</a> / <a
-          href="">Docker as a Strategic Enabler for Dev Teams</a></li>
+          href="http://www.slideshare.net/Flux7Labs/bleeding-edge-meetup-docker-as-a-strategic-enabler-for-development-teams">Docker as a Strategic Enabler for Dev Teams</a></li>
         <li>August &mdash; <a href="2016/08-aug">Bleeding Edge Web</a> / <a
           href="https://saucelabs.com/resources/webinars/automation-best-practices">Test Automation Best Practices</a></li>
         <li>July &mdash; <a href="2016/07-jul">Bleeding Edge Web</a> / <a
