Update Slack link

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       <p><span class="star">&#x272A;</span> <a href="http://www.meetup.com/bleeding-edge-web/">Join
         the meetup</a> to be notified about new events</p>
       <p><span class="star">&#x272A;</span> <a target="_blank"
-        href="mailto:bleedingedgeatx@gmail.com?subject=Slack Invite">Join</a> our <a
-        href="https://edgeatx.slack.com">Slack group</a> to engage with the community, or to
+        href="https://edgeatx-invite.herokuapp.com">Join our Slack group</a> to engage with the community, or to
         participate in our live events remotely</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./speak.html">speaking</a> opportunities.</p>
       <p><span class="star">&#x272A;</span> Learn about <a href="./sponsorship.html">sponsorship</a> opportunities.</p>
