Updated link to React talk.

--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <h3>2016</h3>
       <ul>
         <li>October &mdash; <a href="2016/10-oct">Bleeding Edge Web</a> / <a
-          href="#">Pragmatic React + Redux: Lessons From the Trenches</a></li>
+          href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">Pragmatic React + Redux: Lessons From the Trenches</a></li>
         <li>September &mdash; <a href="2016/09-sep">Bleeding Edge Web</a> / <a
           href="http://www.slideshare.net/Flux7Labs/bleeding-edge-meetup-docker-as-a-strategic-enabler-for-development-teams">Docker as a Strategic Enabler for Dev Teams</a></li>
         <li>August &mdash; <a href="2016/08-aug">Bleeding Edge Web</a> / <a
