Added Jan 2017 slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -32,6 +32,12 @@
         that highlights a few current themes in web app development, in addition to a primary
         presentation (linked when available).</p>
 
+      <h3>2017</h3>
+      <ul>
+        <li>January &mdash; <a href="2017/01-jan">Bleeding Edge Web</a> / <a
+          href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">VueJS for Web Applications</a></li>
+      </ul>
+
       <h3>2016</h3>
       <ul>
         <li>October &mdash; <a href="2016/10-oct">Bleeding Edge Web</a> / <a
