Presentation list updates

--- a/slides/index.html
+++ b/slides/index.html
@@ -40,6 +40,7 @@
 
       <h3>2016</h3>
       <ul>
+        <li>November / December &mdash; <em>Holiday break</em></li>
         <li>October &mdash; <a href="2016/10-oct">Bleeding Edge Web</a> / <a
           href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">Pragmatic React + Redux: Lessons From the Trenches</a></li>
         <li>September &mdash; <a href="2016/09-sep">Bleeding Edge Web</a> / <a
@@ -47,7 +48,7 @@
         <li>August &mdash; <a href="2016/08-aug">Bleeding Edge Web</a> / <a
           href="https://saucelabs.com/resources/webinars/automation-best-practices">Test Automation Best Practices</a></li>
         <li>July &mdash; <a href="2016/07-jul">Bleeding Edge Web</a> / <a
-          href="https://files.slack.com/files-pri/T0B8SJNLQ-F1TSPBSRW/download/20160720-bleeding-edge-web.key">Painless
+          href="https://dl.dropboxusercontent.com/u/16189/20160720-bleeding-edge-web.pdf">Painless
           Server-Side Rendering with React and ClojureScript (Keynote file)</a></li>
         <li>June &mdash; <a href="2016/06-jun">Bleeding Edge Web</a> / <a
           href="https://docs.google.com/presentation/d/1Rg3iuh-p3O0TejefRs02k7uyw7qHt9h_v2zHExULE9o/edit?usp=sharing">Vue.js:
@@ -66,6 +67,7 @@
 
       <h3>2015</h3>
       <ul>
+        <li>November / December &mdash; <em>Holiday break</em></li>
         <li>October &mdash; <a href="2015/10-oct">The Road Four Node</a></li>
         <li>September &mdash; <a href="2015/09-sep">Overview of Ember</a></li>
         <li>August &mdash; <a href="2015/08-aug">Intro to React and Redux</a></li>
@@ -80,6 +82,7 @@
 
       <h3>2014</h3>
       <ul>
+        <li>November / December &mdash; <em>Holiday break</em></li>
         <li>October &mdash; <a href="2014/10-oct">D3.js: Data Visualization for the Modern Web</a></li>
         <li>August &mdash; <a href="2014/08-aug">Web App by Example: Python</a></li>
         <li>July &mdash; <a href="2014/07-july">Web App by Example: Node.js</a></li>
