--- a/slides/index.html
+++ b/slides/index.html
@@ -34,6 +34,8 @@
 
       <h3>2017</h3>
       <ul>
+        <li>February &mdash; <a href="2017/02-feb">Bleeding Edge Web</a> /
+          What I Learnt Spending 200 Hours Teaching my Daughter to Code...</a></li>
         <li>January &mdash; <a href="2017/01-jan">Bleeding Edge Web</a> / <a
           href="https://www.youtube.com/user/austintechlive/search?query=bleeding+edge+web">VueJS for Web Applications</a></li>
       </ul>
