--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <h3>2017</h3>
       <ul>
         <li>March &mdash; <a href="2017/03-mar">Bleeding Edge Web</a> /
-          <a href="https://github.com/coreybutler/talk-electron-fenix">Electron + Fenix</a></li>
+          <a href="https://coreybutler.github.io/talk-electron-fenix/">Electron + Fenix</a></li>
         <li>February &mdash; <a href="2017/02-feb">Bleeding Edge Web</a> /
           What I Learnt Spending 200 Hours Teaching my Daughter to Code...</a></li>
         <li>January &mdash; <a href="2017/01-jan">Bleeding Edge Web</a> / <a
