Browser update, minor slide style refresh

--- a/slides/index.html
+++ b/slides/index.html
@@ -34,6 +34,8 @@
 
       <h3>2017</h3>
       <ul>
+        <li>April &mdash; <a href="2017/04-apr">Bleeding Edge Web</a> /
+          Web Performance Deep Dive with Chander Dhall</li>
         <li>March &mdash; <a href="2017/03-mar">Bleeding Edge Web</a> /
           <a href="https://coreybutler.github.io/talk-electron-fenix/">Electron + Fenix</a></li>
         <li>February &mdash; <a href="2017/02-feb">Bleeding Edge Web</a> /
