--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <h3>2017</h3>
       <ul>
         <li>May &mdash; <a href="2017/05-may">Bleeding Edge Web</a> /
-          The History and Future of Speaking with Machines</li>
+          <a href="https://speakerdeck.com/techpeace" target="_blank">The History and Future of Speaking with Machines</a></li>
           <li>April &mdash; <a href="2017/04-apr">Bleeding Edge Web</a> /
             Web Performance Deep Dive with Chander Dhall</li>
         <li>March &mdash; <a href="2017/03-mar">Bleeding Edge Web</a> /
