--- a/slides/index.html
+++ b/slides/index.html
@@ -34,10 +34,12 @@
 
       <h3>2017</h3>
       <ul>
+        <li>June &mdash; <a href="2017/06-jun">Bleeding Edge Web</a> /
+          <a href="https://docs.google.com/presentation/d/1ODH9hMWkuMi_xW0joq9TIU84tvRnqFgOzMEfBkIsSxw/edit?usp=sharing">Node &amp; Arduino: A fun Introduction</a></li>
         <li>May &mdash; <a href="2017/05-may">Bleeding Edge Web</a> /
           The History and Future of Speaking with Machines</li>
           <li>April &mdash; <a href="2017/04-apr">Bleeding Edge Web</a> /
-            Web Performance Deep Dive with Chander Dhall</li>
+          Web Performance Deep Dive with Chander Dhall</li>
         <li>March &mdash; <a href="2017/03-mar">Bleeding Edge Web</a> /
           <a href="https://coreybutler.github.io/talk-electron-fenix/">Electron + Fenix</a></li>
         <li>February &mdash; <a href="2017/02-feb">Bleeding Edge Web</a> /
