--- a/slides/index.html
+++ b/slides/index.html
@@ -34,6 +34,8 @@
 
       <h3>2017</h3>
       <ul>
+        <li>July &mdash; <a href="2017/07-jul">Bleeding Edge Web</a> /
+          The Peer-to-peer Web</li>
         <li>June &mdash; <a href="2017/06-jun">Bleeding Edge Web</a> /
           <a href="https://docs.google.com/presentation/d/1ODH9hMWkuMi_xW0joq9TIU84tvRnqFgOzMEfBkIsSxw/edit?usp=sharing">Node &amp; Arduino: A fun Introduction</a></li>
         <li>May &mdash; <a href="2017/05-may">Bleeding Edge Web</a> /
