Added sponsor guide

--- a/speak.html
+++ b/speak.html
@@ -66,7 +66,7 @@
       mobile apps, CSS Pointer Events, Node.js utilities, developer services, personal project,
       hackathons, etc.</p>
 
-      <p id="slide-tips"><em><strong>Speaker Guide</strong></em></p>
+      <p id="speaker-guide"><em><strong>Speaker Guide</strong></em></p>
       <p>If you are ready to present at the meetup we have a <a href="./speaker-guide.html">handy speaker
         guide</a> that includes what we'll need from you and some tips that might help with your talk.</p>
 
