--- a/sponsorship.html
+++ b/sponsorship.html
@@ -48,9 +48,14 @@
       <p>This is a great opportunity to create some local awareness, find potential employees,
         give back to the community, and meet new people.</p>
 
-      <p><em><strong>Alternate Sponsorship Opportunities</strong></em></p>
+      <p id="alternate-sponsorship"><em><strong>Alternate Sponsorship Opportunities</strong></em></p>
       <p>We've had sponsors provide giveaway items from books to stickers to physical gadgets.
         If you are interested in providing swag or giveaway items, let us know!</p>
+
+      <p id="sponsor-guide"><em><strong>Sponsor Guide</strong></em></p>
+      <p>If you are ready to sponsor the meetup we have a <a href="./sponsor-guide.html">handy sponsor
+        guide</a> that includes what we'll need from you to get the sponsorship set up.</p>
+
       <p>Organized by <a href="http://moeskau.com/">Brian</a> &amp; <a href="http://www.coreybutler.com/">Corey</a></p>
     </section>
     <footer></footer>
