--- a/speaker-guide.html
+++ b/speaker-guide.html
@@ -27,8 +27,8 @@
     <section>
       <h2>Speaker Guide</h2>
 
-      <p>So you've decided to give a talk for our meetup &mdash; thank you! Here are a few things
-        we'll need from you and some tips to get you started.</p>
+      <p>So you've decided to give a talk for our meetup &mdash; <strong>thank you</strong>! Here
+        are a few things we'll need from you and some tips to get you started.</p>
 
       <p id="need"><em><strong>What We Need From You</strong></em></p>
       <p>We need the following information up front in order to get your talk scheduled:</p>
