--- a/sponsor-guide.html
+++ b/sponsor-guide.html
@@ -27,8 +27,9 @@
     <section>
       <h2>Sponsor Guide</h2>
 
-      <p>So you've decided to sponsor our meetup &mdash; thank you! Here are a few things
-        we'll need from you and some tips to get you started.</p>
+      <p>So you've decided to sponsor our meetup &mdash; <strong>thank you</strong>! If you need
+        a refresher on the pricing and details we have <a href="./sponsorship.html">a page for that</a>.
+        Here are a few things we'll need from you and some tips to get you started.</p>
 
       <p id="need"><em><strong>What We Need From You</strong></em></p>
       <p>We need the following information as soon as possible:</p>
