--- a/slides/index.html
+++ b/slides/index.html
@@ -35,7 +35,7 @@
       <h3>2017</h3>
       <ul>
         <li>August &mdash; <a href="2017/08-aug">Bleeding Edge Web</a> /
-          <a href="">Get the Software Job You Want... Guaranteed</a></li>
+          <a href="https://docs.google.com/presentation/d/10uziLsfuVsSNTiedEiwO0BBNU8u74UT1e7sSTtIpDEE/edit?usp=sharing">Get the Software Job You Want... Guaranteed</a></li>
         <li>July &mdash; <a href="2017/07-jul">Bleeding Edge Web</a> /
             <a href="https://docs.google.com/presentation/d/1V1RrTE7AAuuZ9ztO66px74r4Jod32rVAvHJ4cvRYKEk/edit?cn=bWVzc2FnZQ%3D%3D#slide=id.p">The Peer-to-peer Web</a></li>
         <li>June &mdash; <a href="2017/06-jun">Bleeding Edge Web</a> /
